# DnsLiar

./: Makefile  README.md  TODO.md  dnsliar.conf  docker-compose.yml
.github/workflows/: docker-ghcr.yml  rust.yml
DnsLiar/: Cargo.toml  Dockerfile  blacklist_sources.json  startup.sh
DnsLiar/redis-ctl/: Cargo.toml
DnsLiar/redis-ctl/src/: commands.rs  main.rs  modules.rs
DnsLiar/redis-ctl/src/modules/: rules.rs
DnsLiar/src/: config.rs  errors.rs  filtering.rs  handler.rs  main.rs  redis_mod.rs  resolver.rs
DnsLiar/src/features/: misp.rs
DnsLiar/tests/: test_resolver.rs
