[package]
name = "redis-ctl"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dnsliar = { path = "../" }
clap = { version = "4.5.48", features = ["derive"] }
redis = { version = "0.32.7", features = ["aio", "tokio-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["std"] }
serde_norway = "0.9.42"
time = "0.3.44"
reqwest = { version = "0.12.23", features = ["blocking"] }
